--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -18,7 +18,10 @@ body {
 .emoji {
     font-size: 4rem;
     line-height: 4rem;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-top: 1.1rem;
